# mpvQC-gtk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Readme.md  com.github.mpvqc.mpvQC.yml  meson.build  mpvQC.in  requirements.txt
build-aux/flatpak/: Guide.md  com.github.mpvqc.mpvQC.json  com.github.mpvqc.mpvQC.yml
build-aux/local/: dev-clean.sh  dev-install.sh  dev-start.sh  dev-uninstall.sh
build-aux/meson/: postinstall.py
build-aux/windows/: Guide.md
data/: com.github.mpvqc.mpvQC.appdata.xml  com.github.mpvqc.mpvQC.gschema.xml  meson.build  mpvQC.gresource.xml
data/config/: input.conf  mpv.conf
data/css/: style-general.css  style-linux.css  style.css
data/ui/: about.ui  contentmain.ui  contentmainmpv.ui  contentmaintable.ui  contentpref.ui  input.ui  messagestack.ui  popoveropen.ui  popovertimeedit.ui  popovertypeedit.ui  prefpagegeneral.ui  prefpageimexport.ui  prefpageinput.ui  prefpagempv.ui  searchframe.ui  statusbar.ui  window.ui
mpvqc/: __init__.py  app.py  cellrenderer.py  dialogs.py  main.py  messagedialogs.py  settings.py  template.py  template_custom.py
mpvqc/player/: __init__.py  container.py
mpvqc/qc/: __init__.py  _exporter.py  _handleimport.py  _handlesave.py  _importer.py  _statemessages.py  _states.py  exporter.py  handleimport.py  handlesave.py  importer.py  manager.py  statemessages.py  states.py
mpvqc/ui/: about.py  contentmain.py  contentmainmpv.py  contentmaintable.py  contentpref.py  input.py  messagestack.py  popoveropen.py  popovertimeedit.py  popovertypeedit.py  prefpagegeneral.py  prefpageimexport.py  prefpageinput.py  prefpagempv.py  searchframe.py  statusbar.py  window.py
mpvqc/utils/: __init__.py  draganddrop.py  files.py  input.py  keyboard.py  metadata.py  shortcuts.py  signals.py  validators.py
po/: LINGUAS  de.po  meson.build
